fixed Home button covering problems - Removed standart outline from phone devices

--- a/frontendmentor/space/styling/basic.scss
+++ b/frontendmentor/space/styling/basic.scss
@@ -108,10 +108,10 @@ label {
     font-size: 2rem;
     border-radius: 50%;
     text-transform: uppercase;
-    transition: box-shadow 0.2s;
-    border: none;
     background-color: var(--white);
     color: var(--black);
+    outline: none;
+    transition: box-shadow 0.2s;
     &:hover {
         box-shadow: 0 0 0 5.5rem hsla(0, 0%, 59%, 0.5);
     }
@@ -628,9 +628,9 @@ main {
     }
     #home > main {
         gap: 5rem;
+            padding-bottom: 5rem;
     }
     #technology {
-        
         main {
             grid-template-rows: min-content min-content min-content;
             align-content: space-evenly;
